# keycloak-ekklesia

./: .gitignore  Dockerfile  README.md  deploy.sh  pom.xml
.github/workflows/: maven.yml
external_sync/: README.md  clear_matrix.py  common.py  create_users.py  csv_stats.py  department.py  exists.py  matrix_settings.py  pyproject.toml  rename_attributes.py  requirements.txt  settings.example.py  stats.py  test.csv  update_users.py
external_sync/departments/: department.py  department_parser.py  department_updater.py  settings.py
keycloak-plugin/: pom.xml
keycloak-plugin/src/main/module/: module.xml
keycloak-theme/: pom.xml
themes/: README  README.md
themes/ekklesia-pirates/account/: theme.properties
themes/ekklesia-pirates/account/messages/: messages_de.properties
themes/ekklesia-pirates/account/resources/css/: ekklesia.css
themes/ekklesia-pirates/admin/: theme.properties
themes/ekklesia-pirates/email/messages/: messages_de.properties
themes/ekklesia-pirates/login/: theme.properties
themes/ekklesia-pirates/login/messages/: messages_de.properties
themes/ekklesia-pirates/login/resources/css/: ekklesia.css
themes/ekklesia-pirates/welcome/: index.ftl  theme.properties
themes/ekklesia-pirates/welcome/resources/css/: ekklesia.css
themes/ekklesia/account/: account.ftl  template.ftl
themes/ekklesia/account/messages/: messages_de.properties
themes/ekklesia/login/: login-update-profile.ftl  login.ftl  register.ftl
themes/ekklesia/login/messages/: messages_de.properties
(+33 files in other folders)
